# little

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt
.devcontainer/: Dockerfile  devcontainer.json
cmake/: CPM.cmake  CompilerWarnings.cmake  PackageProject.cmake  Packing.cmake  StandardSettings.cmake  StaticAnalyzers.cmake  Utils.cmake  clang_format.cmake  version.hpp.in
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp
src/libs/: CMakeLists.txt
src/libs/entity/: CMakeLists.txt
src/libs/entity/include/: entity.h
src/libs/entity/src/: entity.cpp
test/: CMakeLists.txt
